@@ -3,6 +3,8 @@
 ==============================
 Release 2.*
 ==============================
+2014-07-11    WindowFinder: Fix missing usage of the Is parameter
+              WindowFinder: Use different WinAPI method to determine the child and parent relationship
 2014-07-10    CodedUIEnvironment: Add settings for defaults in CombinableAnd and CombinableWith
               WindowFinder: Add with Is the possibility to find windows which has a specific relation to another object
 2014-07-09    DynamicSleep: Add DynamicSleep
